--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,7 @@ manifest {
     nextflowVersion = '>= 20.07.1'
 }
 
-process.container = 'dnaseq-pipeline'
+process.container = 'dnavc-pipeline'
 docker {
     enabled = true
     temp = 'auto'
