added vcf annotation and fixed oc docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,14 +17,16 @@ RUN conda install \
 		multiqc==1.9 \
 		samtools==1.11.0 \
 		bcftools==1.11 \
+		pyvcf==0.6.8 \
 		open-cravat==2.2.1
+
 
 ### set up open-cravat
 RUN oc module install -y csvreporter vcfreporter 
-RUN oc module install -y clinvar cancer_genome_interpreter go target
+#RUN oc module install -y clinvar cancer_genome_interpreter go target   ### small test
 
-#RUN oc module install -y clinvar dbsnp cosmic cosmic_gene cancer_genome_interpreter go gnomad
-#RUN oc module install -y target mutpanning pharmgkb cancer_hotspots cgl litvar ncRNA genehancer omim chasmplus_BRCA
+RUN oc module install -y clinvar dbsnp cosmic cosmic_gene cancer_genome_interpreter go gnomad
+RUN oc module install -y target pharmgkb cancer_hotspots cgl litvar ncRNA genehancer omim chasmplus_BRCA
 
 
 
